Fix small issue